--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -9,6 +9,7 @@
     "extends": [
         "eslint:recommended",
         "plugin:node/recommended",
-        "plugin:jest/recommended"
+        "plugin:jest/recommended",
+        "airbnb-base"
     ]
 }
