--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "forever": "^0.15.3",
+    "i18next": "^10.0.7",
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "supertest": "^3.0.0"
