--- a/.env.ci
+++ b/.env.ci
@@ -1,2 +1,9 @@
 NODE_ENV=test
 PORT=3000
+
+DB_TYPE=mysql
+DB_HOST=mysql
+DB_NAME=test_db
+DB_USER=root
+DB_PASSWORD=AK0CvoP1bQ1TEdjFc78kE
+TEST_DB_NAME=test_db
