--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,14 @@
 # https://hub.docker.com/r/library/node/tags/
 image: node:8
 
+services:
+  - mysql:latest
+
+variables:
+  # Configure mysql environment variables (https://hub.docker.com/r/_/mysql/)
+  MYSQL_DATABASE: test_db
+  MYSQL_ROOT_PASSWORD: AK0CvoP1bQ1TEdjFc78kE
+
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 cache:
