--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moduleFileExtensions": [
       "js"
     ],
+    "setupTestFrameworkScriptFile": "<rootDir>/test/setup.js",
     "testMatch": [
       "**/test/**/*.test.js"
     ],
@@ -33,10 +34,12 @@
     ]
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "forever": "^0.15.3",
     "i18next": "^10.0.7",
+    "joi": "^13.0.1",
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "mysql2": "^1.4.2",
